[tool.poetry]
name = "twittertools"
version = "0.1.0"
description = ""
authors = ["Kotet <kotet0418@gmail.com>"]
license = "MIT"
include = [
    "twittertools/config.json"
]

[tool.poetry.dependencies]
python = ">=3.6"
tweepy = "^4.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
